--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.razorpay:checkout:1.2.0'
     compile 'com.google.android.gms:play-services-auth:9.0.0'
-
+    compile 'com.facebook.android:facebook-android-sdk:4.+'
 
 }
