--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <meta-data
             android:name="com.razorpay.ApiKey"
             android:value="rzp_test_A49DyLds91iLWl" />
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
 
         <activity android:name=".LoginActivity"
             android:windowSoftInputMode="stateHidden|adjustPan"></activity>
@@ -52,6 +54,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".InvoiceActivity"></activity>
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
